# PowerMonitor

./: .gitignore  LICENSE  README.md
PCB/: CPU.SchDoc  PowerMonito.PcbDoc  PowerMonitor.PrjPcb  PowerSupply.SchDoc  PowerSwitch.SchDoc  Sensors.SchDoc  Serial.SchDoc  TopView.SchDoc
daemon/: Makefile  Makefile.in  config.h  config.status  configure.ac
daemon/src/: CmdParse.c  CmdParse.h  Cmds_PMon.c  Cmds_PMon.h  Makefile  Makefile.am  Makefile.in  PM_Test  PM_Test.c  PMon_Lib.c  PowerMon_Main.c  PowerMonitor  PowerMonitor.h  PowerMonitor.sh  Serial.c  Serial.h  ShdMem.h  install  main.c  uninstall
daemon/src/.deps/: CmdParse.Po  Cmds_PMon.Po  PM_Test.Po  PMon_Lib.Po  PowerMon_Main.Po  Serial.Po
firmware/: PowerMon.atsln  PowerMon.atsuo
firmware/PowerMon/: DataFlash.c  DataFlash.h  PowerMon.cproj
firmware/PowerMon/Debug/: Makefile  makedep.mk
firmware/PowerMon/Release/: Makefile  makedep.mk
firmware/PowerMon/src/: AD7787_Driver.c  AD7787_Driver.h  CmdProcessor.c  CmdProcessor.h  DataFlash.c  DataFlash.h  Heartbeat.c  Heartbeat.h  PowerChanel.c  PowerChanel.h  Run.c  Run.h  SysLog.c  SysLog.h  UartBuffer.c  UartBuffer.h  asf.h  eeprom.c  eeprom.h  main.c  spi_master.c  spi_master.h
firmware/PowerMon/src/ASF/common/boards/user_board/: init.c
firmware/PowerMon/src/config/: conf_clock.h  conf_eeprom.h  conf_spi_master.h
